@startuml
abstract class Command {
  +execute(context : AppContext) : boolean
  #extractValue(command : String, prefix : String, nextPfx : String) : String
  #nextPrefix(command : String, currentPrefix : String, prefixes : String[]) : String
}

class AppContext {
  -foodList : FoodList
  -presetList : PresetList
  -ui : UserInterface
  +getFoodList() : FoodList
  +getPresetList() : PresetList
  +getUi() : UserInterface
}

class AddCommand {
  +execute(context : AppContext) : boolean
}

class ProfileCommand {
  +execute(context : AppContext) : boolean
}

class GoalsCommand {
  +execute(context : AppContext) : boolean
  +showDailyProgress(foodList : FoodList) : void
  +autoSetGoalsFromBmr(name : String, bmr : double) : void
}

class XYZCommand {
  +execute(context : AppContext) : boolean
}

class ProfileStorage {
  +saveProfile(profile : Profile) : void
  +loadProfile(name : String) : Profile
  +deleteProfile(name : String) : void
}

class GoalsStorage {
  +saveGoals(...) : void
  +loadGoals(name : String) : double[]
}

Command <|-- AddCommand
Command <|-- ProfileCommand
Command <|-- GoalsCommand
Command <|-- XYZCommand

Command ..> AppContext

ProfileCommand ..> ProfileStorage
GoalsCommand ..> GoalsStorage
@enduml
